# reflectionist

./: .gitignore  README.md  pyproject.toml
reflectionist/: __init__.py  __main__.py  cli.py  config.py  database.py  service.py
tests/: test_reflectionist.py
